src/App.css
@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Sora", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;

  /* border: 1px solid black; */
}

.App {
  width: 100vw;
  height: 100%;
}

.App div {
  display: flex;
}

.hero {
  display: flex;
  height: 90%;
  width: 100%;
  gap: 1rem;
  flex-direction: column;
}

button, a {
  text-decoration: none;
  background: none;
  border: none;
  cursor: pointer;
}

.sidebar + div {
  width: 76%;
  height: 100%;
  display: flex;
  flex-direction: column;
  box-shadow: 2px 4px 30px 0px #00000040;
}

.hero > div:nth-child(2) {
  display: flex;
  justify-content: left;
  gap: 1rem;
}

.hero > div:nth-child(1) {
  height: 5rem;
  display: flex;
  gap: 5rem;
}

input, textarea, select {
  font-size: 16px;
}

